# Cocoya

./: .antigravity.md  .clinerules.md  .gitignore  .vscodeignore  AGENTS.md  DATASET_MANAGER_PLAN.md  FILE_STRUCTURE.md  GEMINI.md  README.md  package-lock.json  package.json  tsconfig.json
docs/: api_manifest.md  backend_api_manifest.md  docker_training_deployment_guide.html  mvp_development_guide.md  system_spec.html
examples/: .00.xml.bak.old_1777607007  .00.xml.bak.old_1777607276  .00.xml.bak.old_1778051776  .00.xml.bak.old_2026-06-03T03-05-53-327Z  .00.xml.bak.old_2026-06-03T03-30-29-820Z  .00_piCar_02-2_避障.xml.bak.old_1777605924  .00_piCar_02-2_避障.xml.bak.old_1778036820  .00_piCar_02-2_避障.xml.bak.old_2026-05-09T03-49-52-563Z  .00_piCar_02-3_隨機避障.xml.bak.old_1777858713  .00_piCar_02-3_隨機避障.xml.bak.old_1778031689  .00_piCar_02-3_隨機避障.xml.bak.old_1778297246  .00_piCar_02-4_按喇叭.xml.bak.old_1778031754  .00_piCar_02-4_按喇叭.xml.bak.old_1778036683  .01_OpenCV.xml.bak.old_1777602915  .13_NosePopper_Advanced.xml.bak.old_1777604970  .34_piCar_Sensors.xml.bak.old_1777606104  .34_piCar_Sensors.xml.bak.old_1777606620  .34_piCar_Sensors.xml.bak.old_1777608506  .34_piCar_Sensors.xml.bak.old_1777615677  .34_piCar_Sensors.xml.bak.old_1777618075  0.xml  00.xml  01.xml  (+38 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: commands.toml
src-tauri/resources/: core_manifest.json
src-tauri/src/: lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/commands/: app.rs  file.rs  mcu.rs  mod.rs  python.rs
(+362 files in other folders)
